- Support for homunculus skills in skills.txt (use normal skill blocks to use them)
- Add support for new vRO. Use serverType 10
- Added teleportAuto_lostTarget, teleport when target is lost.
- Added an experimental mob-training control. Use attack flag 3 in mon_control.txt
	to activate this. Please visit http://forums.openkore.com/viewtopic.php?p=134002
	for the discussion.

New config options:
- attackChangeTarget <boolean flag>
    automatically change target to an aggressive monster if the target monster is
    not yet reached or damaged. This prevents you from continuously routing to your
    target while dragging a mob of aggressive monsters behind you
- homunculus_followDistanceMax <distance>
- homunculus_followDistanceMin <distance>
    Kore and the homunculus will always try to keep within these distances
    from each other
- homunculus_attackAuto <flag>
- homunculus_attackAuto_party <flag>
- homunculus_attackAuto_notInTown <boolean flag>
- homunculus_attackAuto_onlyWhenSafe <boolean flag>
- homunculus_attackDistance <distance>
- homunculus_attackMaxDistance <distance>
- homunculus_attackMaxRouteTime <seconds>
- homunculus_attackMinPlayerDistance <distance>
- homunculus_attackMinPortalDistance <distance>
- homunculus_attackCanSnipe <boolean flag>
- homunculus_attackCheckLOS <boolean flag>
- homunculus_attackNoGiveup <boolean flag>
    same as the attackAuto* counterparts.
- homunculus_attackChangeTarget <boolean flag>
    same as attackChangeTarget
- homunculus_route_step <number>
    this option is required or your homunculus will not be able to move
- homunculus_runFromTarget <boolean flag>
- homunculus_runFromTarget_dist <distance>
    these will mostly be not needed but they are still included for posterity
- homunculus_tankMode <boolean flag>
- homunculus_tankModeTarget <player name>
    same as the tankMode* counterparts. You can use this so that your
	homunculus can tank you. Set homunculus_tankModeTarget to your character name